--- a/Ceriyo.Infrastructure.WPF/Controls/LocalStringEditor.xaml
+++ b/Ceriyo.Infrastructure.WPF/Controls/LocalStringEditor.xaml
@@ -17,7 +17,6 @@
         <ScrollViewer>
         
             <ListView x:Name="ItemsListView"
-                      Grid.Row="0"
                       ItemsSource="{Binding ItemsSource,
                                             RelativeSource={RelativeSource FindAncestor, local:LocalStringEditor,1}}">
                 <ListView.ItemContainerStyle>
@@ -43,7 +42,7 @@
                 <ListView.View>
 
                     <GridView AllowsColumnReorder="False">
-                        <GridViewColumn Header="Key" Width="Auto">
+                        <GridViewColumn Header="Key" Width="75">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <ContentControl Content="{Binding}">
@@ -61,7 +60,7 @@
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn Header="Value" Width="Auto">
+                        <GridViewColumn Header="Value" Width="75">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <ContentControl Content="{Binding}">
@@ -79,7 +78,7 @@
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn Header="Action" Width="Auto">
+                        <GridViewColumn Header="Action" Width="75">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button Click="DeleteButtonClicked"
