--- a/Ceriyo.Toolset.WPF/Views/TilesetEditorView/TilesetEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/TilesetEditorView/TilesetEditor.xaml
@@ -1,9 +1,243 @@
 ﻿<UserControl x:Class="Ceriyo.Toolset.WPF.Views.TilesetEditorView.TilesetEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
-            
+
+        <i:Interaction.Triggers>
+            <prism:InteractionRequestTrigger SourceObject="{Binding ConfirmDeleteRequest, Mode=OneWay}">
+                <prism:PopupWindowAction IsModal="True" CenterOverAssociatedObject="True"/>
+            </prism:InteractionRequestTrigger>
+        </i:Interaction.Triggers>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="32"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="32"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="64"></ColumnDefinition>
+            <ColumnDefinition Width="64"></ColumnDefinition>
+            <ColumnDefinition Width="128"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Margin="2,2,2,2">
+            Tilesets:
+        </Label>
+
+
+        <ListBox
+            Grid.Column="0"
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            Grid.RowSpan="3"
+            DisplayMemberPath="Name"
+            SelectionMode="Single"
+            ItemsSource="{Binding Tilesets}"
+            SelectedItem="{Binding SelectedTileset,
+                                Mode=TwoWay,
+                                ValidatesOnDataErrors=True,
+                                NotifyOnValidationError=True,
+                                UpdateSourceTrigger=PropertyChanged}"
+            BorderBrush="{DynamicResource AccentColorBrush}"
+            BorderThickness="1">
+        </ListBox>
+
+        <Button
+            Grid.Row="4"
+            Grid.Column="0"
+            Margin="2,2,2,2"
+            Command="{Binding NewCommand}">
+            New
+        </Button>
+
+        <Button
+            Grid.Row="4"
+            Grid.Column="1"
+            Margin="2,2,2,2"
+            Command="{Binding DeleteCommand}">
+            Delete
+        </Button>
+
+        <TabControl
+            Grid.Row="0"
+            Grid.Column="3"
+            Grid.RowSpan="5"
+            BorderThickness="1"
+            BorderBrush="{DynamicResource AccentColorBrush}">
+            <TabItem Header="Designer"
+                     controls:ControlsHelper.HeaderFontSize="14">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="128"></RowDefinition>
+                    </Grid.RowDefinitions>
+
+                    <DockPanel>
+                        
+                        <ScrollViewer
+                            HorizontalScrollBarVisibility="Auto"
+                            Grid.Column="0"
+                            Grid.Row="0">
+
+
+                            <Grid>
+                                <Image
+                                    Source="{Binding ActiveTilesetImage}"
+                                    Stretch="Fill"
+                                    Width="{Binding ActiveTilesetImageWidth}"
+                                    Height="{Binding ActiveTilesetImageHeight}"
+                                    HorizontalAlignment="Left"
+                                    VerticalAlignment="Top">
+
+                                </Image>
+
+                                <Canvas>
+                                    <Canvas.Background>
+                                        <DrawingBrush Viewport="0,0,64,64" ViewportUnits="Absolute" TileMode="Tile">
+                                            <DrawingBrush.Drawing>
+                                                <DrawingGroup>
+                                                    <GeometryDrawing Brush="Transparent">
+                                                        <GeometryDrawing.Geometry>
+                                                            <RectangleGeometry Rect="0,0,1,1"></RectangleGeometry>
+                                                        </GeometryDrawing.Geometry>
+                                                    </GeometryDrawing>
+                                                    <GeometryDrawing Geometry="M0,0 L1,0 1,0.05, 0,0.05Z " Brush="Black">
+                                                    </GeometryDrawing>
+                                                    <GeometryDrawing Geometry="M0,0 L0,1 0.05,1, 0.05,0Z" Brush="Black">
+                                                    </GeometryDrawing>
+
+                                                </DrawingGroup>
+                                            </DrawingBrush.Drawing>
+                                        </DrawingBrush>
+                                    </Canvas.Background>
+                                </Canvas>
+
+                            </Grid>
+                            
+                        </ScrollViewer>
+
+                    </DockPanel>
+                    <ListBox
+                        IsEnabled="{Binding IsTilesetSelected}"
+                        Grid.Column="0"
+                        Grid.Row="1"
+                        ItemsSource="{Binding TilesetImages}"
+                        SelectedItem="{Binding SelectedTileset.ResourceName}">
+                    </ListBox>
+                    
+                </Grid>
+            </TabItem>
+            <TabItem Header="Description"
+                     controls:ControlsHelper.HeaderFontSize="14">
+                <TextBox 
+                		AcceptsReturn="True"
+                		TextWrapping="Wrap"
+                        IsEnabled="{Binding IsTilesetSelected}"
+                		Text="{Binding SelectedTileset.Description,
+                                       Mode=TwoWay,
+                                       ValidatesOnDataErrors=True,
+                                       NotifyOnValidationError=True,
+                                       UpdateSourceTrigger=PropertyChanged}" />
+            </TabItem>
+            <TabItem Header="Comments"
+                     controls:ControlsHelper.HeaderFontSize="14">
+                <TextBox 
+                		AcceptsReturn="True"
+                		TextWrapping="Wrap"
+                        IsEnabled="{Binding IsTilesetSelected}"
+                		Text="{Binding SelectedTileset.Comment,
+                                       Mode=TwoWay,
+                                       ValidatesOnDataErrors=True,
+                                       NotifyOnValidationError=True,
+                                       UpdateSourceTrigger=PropertyChanged}" />
+            </TabItem>
+        </TabControl>
+
+
+        <Grid
+            Grid.Row="0"
+            Grid.Column="2"
+            Grid.RowSpan="5">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="1">
+                Name:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="2"
+                Margin="2,2,2,2"
+                Text="{Binding SelectedTileset.Name,
+                               Mode=TwoWay,
+                               ValidatesOnDataErrors=True,
+                               NotifyOnValidationError=True,
+                               UpdateSourceTrigger=PropertyChanged}"
+                IsEnabled="{Binding IsTilesetSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="3">
+                Tag:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="4"
+                Margin="2,2,2,2"
+                Text="{Binding SelectedTileset.Tag,
+                               Mode=TwoWay,
+                               ValidatesOnDataErrors=True,
+                               NotifyOnValidationError=True,
+                               UpdateSourceTrigger=PropertyChanged}"
+                IsEnabled="{Binding IsTilesetSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="5">
+                Resref:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="6"
+                Margin="2,2,2,2"
+                Text="{Binding SelectedTileset.Resref,
+                               Mode=TwoWay,
+                               ValidatesOnDataErrors=True,
+                               NotifyOnValidationError=True,
+                               UpdateSourceTrigger=PropertyChanged}"
+                IsEnabled="{Binding IsTilesetSelected}">
+            </TextBox>
+        </Grid>
+
     </Grid>
 </UserControl>
