Refactoring of validation / interfaces on observables and domain objects. Area creation process

--- a/Ceriyo.Toolset.WPF/Views/AreaSelectorView/AreaSelector.xaml
+++ b/Ceriyo.Toolset.WPF/Views/AreaSelectorView/AreaSelector.xaml
@@ -43,7 +43,8 @@
             <TreeViewItem
                 ItemsSource="{Binding Areas}"
                 Header="Areas"
-                ContextMenu="{StaticResource RootContextMenu}">
+                ContextMenu="{StaticResource RootContextMenu}"
+                IsExpanded="{Binding IsAreaListExpanded}">
 
                 <TreeViewItem.ItemTemplate>
                     <DataTemplate>
