--- a/Ceriyo.Toolset.WPF/Views/NewAreaView/NewArea.xaml
+++ b/Ceriyo.Toolset.WPF/Views/NewAreaView/NewArea.xaml
@@ -103,6 +103,7 @@
             Grid.ColumnSpan="2"
             Grid.Row="3"
             Margin="2,2,2,2"
+            DisplayMemberPath="Name"
             ItemsSource="{Binding Tilesets}"
             SelectedItem="{Binding SelectedTileset,
                                    Mode=TwoWay, 
