--- a/Ceriyo.Toolset.WPF/Views/AreaSelectorView/AreaSelector.xaml
+++ b/Ceriyo.Toolset.WPF/Views/AreaSelectorView/AreaSelector.xaml
@@ -23,7 +23,9 @@
     </UserControl.Resources>
     
     <Grid>
-        <TreeView IsEnabled="{Binding IsModuleLoaded}">
+        <TreeView 
+            x:Name="AreaTreeView"
+            IsEnabled="{Binding IsModuleLoaded}">
             <i:Interaction.Behaviors>
                 <behaviors:BindableSelectedItemBehavior
                     SelectedItem="{Binding SelectedTreeItem, 
@@ -37,9 +39,6 @@
                     </MenuItem>
                 </ContextMenu>
                 <ContextMenu x:Key="AreaContextMenu">
-                    <MenuItem Header="Rename" 
-                              Command="{Binding Path=Data.RenameAreaCommand, Source={StaticResource DataContextProxy}}">
-                    </MenuItem>
                     <MenuItem Header="Properties"
                               Command="{Binding Path=Data.OpenAreaPropertiesCommand, Source={StaticResource DataContextProxy}}">
                     </MenuItem>
@@ -51,10 +50,12 @@
             </TreeView.Resources>
 
             <TreeViewItem
+                x:Name="Root"
                 ItemsSource="{Binding Areas}"
                 Header="Areas"
                 ContextMenu="{StaticResource RootContextMenu}"
-                IsExpanded="{Binding IsAreaListExpanded}">
+                IsExpanded="{Binding IsAreaListExpanded}"
+                PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown">
                 <TreeViewItem.ItemTemplate>
                     <HierarchicalDataTemplate>
                         <TextBlock Text="{Binding Name}"
@@ -81,8 +82,8 @@
                         <newAreaView:NewArea
                                 MinWidth="350"
                                 MinHeight="350"
-                                Width="300"
-                                Height="300"
+                                Width="350"
+                                Height="350"
                                 HorizontalAlignment="Stretch"
                                 VerticalAlignment="Stretch"/>
                     </prism:PopupWindowAction.WindowContent>
@@ -95,10 +96,10 @@
                                          ResizeMode="NoResize">
                     <prism:PopupWindowAction.WindowContent>
                         <areaPropertiesView:AreaProperties
-                                MinWidth="223"
-                                MinHeight="128"
-                                Width="223"
-                                Height="128"
+                                MinWidth="500"
+                                MinHeight="400"
+                                Width="500"
+                                Height="400"
                                 HorizontalAlignment="Stretch"
                                 VerticalAlignment="Stretch"/>
                     </prism:PopupWindowAction.WindowContent>
