--- a/Ceriyo.Toolset.WPF/Views/AreaEditorView/AreaEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/AreaEditorView/AreaEditor.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"
              xmlns:wpf="clr-namespace:Ceriyo.Toolset.WPF"
+             xmlns:gameWorld="clr-namespace:Ceriyo.Toolset.WPF.GameWorld"
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
-        <wpf:ToolsetGame></wpf:ToolsetGame>
+        <gameWorld:ToolsetGame></gameWorld:ToolsetGame>
     </Grid>
 </UserControl>
